# serializer version: 1
# name: test_log_wrappers_delegate_through_convenience_methods
  list([
    tuple(
      <LogLevel.DEBUG: 'DEBUG'>,
      'Loading 3 documents',
      None,
      False,
    ),
    tuple(
      <LogLevel.INFO: 'INFO'>,
      'Loaded 3 documents',
      None,
      False,
    ),
    tuple(
      <LogLevel.WARNING: 'WARNING'>,
      'Potential issue in ingestion',
      None,
      False,
    ),
    tuple(
      <LogLevel.ERROR: 'ERROR'>,
      'Failed job job-1',
      RuntimeError('boom'),
      False,
    ),
    tuple(
      <LogLevel.ERROR: 'ERROR'>,
      'Failed capture job-2',
      True,
      False,
    ),
  ])
# ---
# name: test_log_wrappers_fall_back_to_logger_log_when_needed
  list([
    tuple(
      10,
      'Loading 3 documents',
      None,
      False,
    ),
    tuple(
      20,
      'Loaded 3 documents',
      None,
      False,
    ),
    tuple(
      30,
      'Potential issue in ingestion',
      None,
      False,
    ),
    tuple(
      40,
      'Failed job job-1',
      RuntimeError('boom'),
      False,
    ),
    tuple(
      40,
      'Failed capture job-2',
      True,
      False,
    ),
  ])
# ---
# name: test_stdlib_style_logger_methods_emit_to_python_handlers
  list([
    tuple(
      'tests.logging.runtime',
      'INFO',
      'hello from episodic',
    ),
    tuple(
      'tests.logging.runtime',
      'ERROR',
      'failed job',
    ),
    tuple(
      'tests.logging.runtime',
      'ERROR',
      'captured failure',
    ),
  ])
# ---
